# get_version

./: .coveralls.yml  .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  README.rst  get_version.py  pyproject.toml
.github/workflows/: run_tests.yml
get_version/: __init__.py  testing.py
src/get_version/: __init__.py  testing.py
tests/: conftest.py  test_packages.py
type-stubs/: dunamai.pyi
