[build-system]
requires = ['flit-core>=2,<4', 'dunamai']
build-backend = 'flit_core.buildapi'

[tool.flit.metadata]
module = 'get_version'
author = 'Philipp Angerer'
author-email = 'phil.angerer@gmail.com'
home-page = 'https://github.com/flying-sheep/get_version'
classifiers = [
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
]
requires-python = '>=3.7'
requires = [
    'dunamai',  # Version parsing
    'importlib_metadata; python_version < "3.8"',
]
description-file = 'README.rst'

[tool.flit.metadata.requires-extra]
test = [
    'pytest>=6.2.5',
    'pytest-black',
    'pytest-mypy',
    'pygments',  # for README highlighting check
]

[tool.black]
include = '\.pyi?$'

[tool.pytest.ini_options]
addopts = '-p get_version.testing'

[tool.mypy]
mypy_path = './type-stubs'
