[project]
name = 'get_version'
authors = [{ name = 'Philipp Angerer', email = 'phil.angerer@gmail.com' }]
urls.Homepage = 'https://github.com/flying-sheep/get_version'
classifiers = [
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
]
readme = 'README.rst'
license = { file = 'LICENSE' } # 'GPL-3.0-or-later'
requires-python = '>=3.9'
dependencies = [
    'dunamai>=1.19.0',  # Version parsing
]
dynamic = ['version', 'description']

[project.optional-dependencies]
test = [
    'pytest>=6.2.5',
    'pytest-mypy',
    'pygments',  # for README highlighting check
]

[tool.hatch.envs.hatch-test]
features = ['test']

[tool.ruff.lint]
select = ['E', 'F', 'W', 'I', 'UP', 'TCH', 'ANN', 'RUF', 'PT']
ignore = ['ANN101']
allowed-confusables = ['’', '×']
[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["get_version"]
required-imports = ["from __future__ import annotations"]
[tool.ruff.lint.flake8-type-checking]
strict = true
exempt-modules = []

[tool.pytest.ini_options]
addopts = ['-p', 'get_version.testing']
filterwarnings = ['error']

[build-system]
requires = ['flit-core>=2,<4', 'dunamai']
build-backend = 'flit_core.buildapi'
